--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -8,13 +8,18 @@
     </head>
     <body>
 		<div id="menu">
-			<a href="{{ path('homepage') }}">Accueil</a>
-			<a href="{{ path('install') }}">Installation</a>
-			{% if is_granted('IS_AUTHENTICATED_FULLY') %}
-				<a href="{{ path('user.logout') }}">Logout</a>
-			{% else %}
-				<a href="{{ path('user.login') }}">Login</a>
-			{% endif %}
+			<ul>
+				<li><a href="{{ path('homepage') }}">Accueil</a></li>
+				<li><a href="{{ path('install') }}">Installation</a></li>
+				{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+					<li><a href="{{ path('user') }}">My account</a></li>
+					<li><a href="{{ path('user.list') }}">User list</a></li>
+					<li><a href="{{ path('user.logout') }}">Logout</a></li>
+				{% else %}
+					<li><a href="{{ path('user.login') }}">Sign in</a></li>
+					<li><a href="{{ path('user.register') }}">Create acount</a></li>
+				{% endif %}
+			</ul>
 		</div>
 		
         <div id="content">{% block content %}{% endblock %}</div>
