Quelques corrections, et fin de développement de vue basiques.

--- a/src/LarpManager/Views/gn/add.twig
+++ b/src/LarpManager/Views/gn/add.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 	
-	<form action="{{ path('gn_add') }}" action="POST">
+	<form action="{{ path('gn_add') }}" method="POST">
 		<div>
 			<label for="name">Nom du GN</label>
 			<input type="text" name="name" />
