Ajout de quelques entités.

--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -9,6 +9,7 @@
     <body>
 		<div id="menu">
 			<ul>
+				<li><a href="http://www.eveoniris.com"">Eve-Oniris</a></li>
 				<li><a href="{{ path('homepage') }}">Accueil</a></li>
 				<li><a href="{{ path('install') }}">Installation</a></li>
 				{% if is_granted('IS_AUTHENTICATED_FULLY') %}
