--- a/src/LarpManager/Views/pays/modify.twig
+++ b/src/LarpManager/Views/pays/modify.twig
@@ -2,20 +2,20 @@
 
 {% block content %}
 	
-	<form action="{{ path('chrono_modify') }}" method="POST">
+	<form action="{{ path('pays_modify',{index: pays.id}) }}" method="POST">
 		<div>
 			<label for="nom">Nom du pays</label>
-			<input type="text" name="nom">{{ pays.nom }}</input>
+			<input type="text" name="nom" value="{{ pays.nom }}"></input>
 			<label for="description">Description</label>
-			<input type="text" name="description">{{ pays.description }}</input>
+			<input type="text" name="description" value="{{ pays.description }}"></input>
 			<label for="impot">Impôt</label>
-			<input type="text" name="impot">{{ pays.impot }}</input>
+			<input type="text" name="impot" value="{{ pays.impot }}"></input>
 			<label for="richesse">Richesse</label>
-			<input type="text" name="richesse">{{ pays.richesse }}</input>
+			<input type="text" name="richesse" value="{{ pays.richesse }}"></input>
 			<label for="histoire">Histoire</label>
-			<input type="text" name="histoire">{{ pays.histoire }}</input>
+			<input type="text" name="histoire" value="{{ pays.histoire }}"></input>
 			<label for="nom">Capitale</label>
-			<input type="text" name="capitale">{{ pays.capitale }}</input>
+			<input type="text" name="capitale" value="{{ pays.capitale }}"></input>
 		</div>
 		<input type="submit" value="Modifier" />
 	</form>
