--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -12,7 +12,9 @@
 				<li><a href="http://www.eveoniris.com"">Eve-Oniris</a></li>
 				<li><a href="{{ path('homepage') }}">Accueil</a></li>
 				<li><a href="{{ path('install') }}">Installation</a></li>
+				<li><a href="{{ path('stock_homepage') }}">Gestion du stock</a></li>
 				{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+					
 					<li><a href="{{ path('user') }}">My account</a></li>
 					<li><a href="{{ path('user.list') }}">User list</a></li>
 					<li><a href="{{ path('user.logout') }}">Logout</a></li>
