Travail sur la gestion du stock et petites choses annexes
Ajout du controlleur Stock
Ajout des vues corerspondantes
Ajout des dépendances pour gérer les formulaires
Ajout des dépendances pour gérer le cache
Création des formulaires pour l'entités Etat
Création d'un style basique pour les formulaires
Externalisation du menu dans une vue à part.
Possiblité d'utiliser des Entité directement dans un formulaire.
Ajout du répertoire cache
Chargement de l'aplication avec le cache si debug = false, sinon
désactivation du cache.
Utilisation du cache de Twig
Mise à jour du modéle de base de données

--- a/src/LarpManager/Views/stock/index.twig
+++ b/src/LarpManager/Views/stock/index.twig
@@ -9,20 +9,54 @@
 <li><a href="{{ path('stock_etat_add') }}">Ajouter un etat</a></li>
 <li><a href="{{ path('stock_tag_add') }}">Ajouter un tag</a></li>
 <li><a href="{{ path('stock_localisation_add') }}">Ajouter une localisation</a></li>
-<li><a href="{{ path('stock_possesseur_add') }}">Ajouter un possesseur</a></li>
+<li><a href="{{ path('stock_proprietaire_add') }}">Ajouter un proprietaire</a></li>
+</ul>
+
+<ul>
+<li><a href="{{ path('stock_objet_list') }}">Liste des objets</a></li>
+<li><a href="{{ path('stock_etat_list') }}">Liste des états</a></li>
+<li><a href="{{ path('stock_tag_list') }}">Liste des tags</a></li>
+<li><a href="{{ path('stock_localisation_list') }}">Liste des localisations</a></li>
+<li><a href="{{ path('stock_proprietaire_list') }}">Liste des propriétaires</a></li>
 </ul>
 
 <div>
-Liste des derniers objets ajoutés dans le stock
+Liste des derniers objets ajoutés dans le stock.
 </div>
 
 <div>
-Liste des objets à fabriquer
+Liste des objets à fabriquer.
+Télécharger la liste.
 </div>
 
+<div>
+<fieldset>
+<p>Afin d'éviter les mauvaises surprises, tous les objets doivent avoir un responsable. Cela permet de qui est en charge de tel objet (fabrication, rammener sur le gn, etc ...).
+La liste ci-dessous présente les objets n'ayant pas de responsable.</p>
+
+Liste des objets sans responsables.
+Télécharger la liste
+</fieldset>
+</div>
 
 <div>
-Liste des objets sans responsables
+<fieldset>
+<p>Afin d'obtenir un stock cohérent, tous les objets doivent appartenir à quelqu'un.
+La liste ci-dessous présente les objets n'ayant pas de propriétaires.</p>
+
+Liste des objets sans propriétaires.
+Télécharger la liste.
+</fieldset>
+</div>
+
+<div>
+<fieldset>
+<p>Afin de savoir précisemment ou se trouvent les objets, tous les objets doivent avoir une localisation.
+La liste ci-dessous présente les objets n'ayant pas de localisations définie.</p>
+
+Liste des objets sans localisations.
+Télécharger la liste.
+</fieldset>
 </div>
 
 {%  endblock %}
