Travail sur les formulaires
* Ajout de purecss pour gérer la présentation http://purecss.io/
* Ajout de jquery pour les requêtes ajax
* Un contrôleur par objet du stock
* Ajout d'un systeme d'icone css
* Surcharge des formulaires par défaut de symfony
* Tous les formualaires de gestion de stock sont fonctionnel
* Retrait de certaines contraites non nulle sur l'entité objet
* Définition de getter & setter sur le responsable et le créateur d'un
objet

--- a/src/LarpManager/Views/stock/etat/update.twig
+++ b/src/LarpManager/Views/stock/etat/update.twig
@@ -1,12 +1,7 @@
-{% extends "layout.twig" %}
-
-{% block content %}
-
-	<h2>Saisie d'un état</h2>
-	<form action="{{ path('stock_etat_update', {index:etat.id} ) }}" method="POST">
-		{{ form_start(form) }}
-	    {{ form_widget(form) }}
-	    {{ form_end(form) }}
-	</form>
-
-{%  endblock %}
+<form action="{{ path('stock_etat_update', {index:etat.id} ) }}" method="POST" class="pure-form">
+	<fieldset>
+	<legend>Modification d'un état</legend>
+		{% form_theme form 'Form/fields.twig' %}
+		{{ form(form) }}
+	</fieldset>
+</form>
