--- a/src/LarpManager/Views/stock/index.twig
+++ b/src/LarpManager/Views/stock/index.twig
@@ -2,61 +2,39 @@
 
 {% block content %}
 
-<h2>Gestion du stock</h2>
+<h1>Gestion du stock</h1>
 
+<p>Il y a actuellement {{ objet_count }} objet(s) enregistré(s) dans le stock</p>
+
+{% if objet_without_proprio_count != 0 or objet_without_responsable_count != 0 or objet_without_localisation_count != 0 %}
+<div class="warning">
+<h2>Des problèmes sont à régler !</h2>
 <ul>
-<li><a href="{{ path('stock_objet_add') }}">Ajouter un objet dans le stock</a></li>
-<li><a href="{{ path('stock_etat_add') }}">Ajouter un etat</a></li>
-<li><a href="{{ path('stock_tag_add') }}">Ajouter un tag</a></li>
-<li><a href="{{ path('stock_localisation_add') }}">Ajouter une localisation</a></li>
-<li><a href="{{ path('stock_proprietaire_add') }}">Ajouter un proprietaire</a></li>
+{% if objet_without_proprio_count != 0 %}
+<li>Attention, {{ objet_without_proprio_count }} objet(s) sans propriétaire.</li>
+{%  endif %}
+
+{% if objet_without_responsable_count != 0 %}
+<li>Attention, {{ objet_without_responsable_count }} objet(s) sans responsable.</li>
+{%  endif %}
+
+{% if objet_without_localisation_count != 0 %}
+<li>Attention, {{ objet_without_localisation_count }} objet(s) sans localisation.</li>
+{%  endif %}
+</ul>
+</div>
+{% endif %}
+
+<div>
+<h3>Liste des derniers objets ajoutés dans le stock.</h3>
+<ul>
+{% for objet in last_add %}
+	<li><a href="{{ path('stock_objet_detail',{index:objet.id}) }}">{{ objet.nom }}</a></li>
+{% endfor %}
 </ul>
 
-<ul>
-<li><a href="{{ path('stock_objet_list') }}">Liste des objets</a></li>
-<li><a href="{{ path('stock_etat_list') }}">Liste des états</a></li>
-<li><a href="{{ path('stock_tag_list') }}">Liste des tags</a></li>
-<li><a href="{{ path('stock_localisation_list') }}">Liste des localisations</a></li>
-<li><a href="{{ path('stock_proprietaire_list') }}">Liste des propriétaires</a></li>
-</ul>
-
-<div>
-Liste des derniers objets ajoutés dans le stock.
-</div>
-
-<div>
-Liste des objets à fabriquer.
 Télécharger la liste.
 </div>
 
-<div>
-<fieldset>
-<p>Afin d'éviter les mauvaises surprises, tous les objets doivent avoir un responsable. Cela permet de qui est en charge de tel objet (fabrication, rammener sur le gn, etc ...).
-La liste ci-dessous présente les objets n'ayant pas de responsable.</p>
-
-Liste des objets sans responsables.
-Télécharger la liste
-</fieldset>
-</div>
-
-<div>
-<fieldset>
-<p>Afin d'obtenir un stock cohérent, tous les objets doivent appartenir à quelqu'un.
-La liste ci-dessous présente les objets n'ayant pas de propriétaires.</p>
-
-Liste des objets sans propriétaires.
-Télécharger la liste.
-</fieldset>
-</div>
-
-<div>
-<fieldset>
-<p>Afin de savoir précisemment ou se trouvent les objets, tous les objets doivent avoir une localisation.
-La liste ci-dessous présente les objets n'ayant pas de localisations définie.</p>
-
-Liste des objets sans localisations.
-Télécharger la liste.
-</fieldset>
-</div>
 
 {%  endblock %}
