--- a/src/LarpManager/Views/stock/localisation/add.twig
+++ b/src/LarpManager/Views/stock/localisation/add.twig
@@ -1,12 +1,7 @@
-{% extends "layout.twig" %}
-
-{% block content %}
-
-	<h2>Saisie d'un tag</h2>
-	<form action="{{ path('stock_localisation_add') }}" method="POST">
-		{{ form_start(form) }}
-	    {{ form_widget(form) }}
-	    {{ form_end(form) }}
-	</form>
-
-{%  endblock %}
+<form action="{{ path('stock_localisation_add') }}" method="POST" class="pure-form">
+	<fieldset>
+		<legend>Ajout d'une localisation</legend>
+		{% form_theme form 'Form/fields.twig' %}
+		{{ form(form) }}
+	</fieldset>
+</form>
