Système de navigation par page pour les tableaux avec beaucoup d'éléments

--- a/src/LarpManager/Views/stock/objet/index.twig
+++ b/src/LarpManager/Views/stock/objet/index.twig
@@ -4,7 +4,26 @@
 
 	<div id="ajax_entity">
 		<table class="pure-table pure-table-horizontal pure-table-striped">
-		<caption>Liste des objets</caption>
+		<caption>
+			<p>Liste des objets</p>
+
+				<a title="Première page" href="{{ path('stock_objet_index_nav',{page: 1, perPage: perPage}) }}"><li class="icon-first-page"></li></a>
+				<a title="Page précédente" href="{{ path('stock_objet_index_nav',{page: prevPage, perPage: perPage}) }}"><li class="icon-prev-page"></li></a>
+				page {{currentPage }} sur {{ pageCount }}			
+				<a title="Page suivante" href="{{ path('stock_objet_index_nav',{page: nextPage, perPage: perPage}) }}"><li class="icon-next-page"></li></a>
+				<a title="Dernière page" href="{{ path('stock_objet_index_nav',{page: pageCount, perPage: perPage}) }}"><li class="icon-last-page"></li></a>
+
+			<form action="{{ path('stock_objet_index') }}" method="POST">
+				<select name="perPage">
+					<option value="5" {%  if 5 == perPage %} selected {% endif %}>5</option>
+					<option value="10" {%  if 10 == perPage %} selected {% endif %}>10</option>
+					<option value="20" {%  if 20 == perPage %} selected {% endif %}>20</option>
+					<option value="50" {%  if 50 == perPage %} selected {% endif %}>50</option>
+				</select> objets présentés par page
+				<input type="submit" value="Recharger" />
+			</form>
+		</caption>
+		
 		<thead>
 			<tr>
 				<th>Nom</th>
@@ -14,15 +33,9 @@
 				<th>Photo</th>
 				<th>Localisation</th>
 				<th>Etat</th>
-				<th>Taille</th>
-				<th>Poid</th>
-				<th>Couleur</th>
 				<th>Proprietaire</th>
 				<th>Responsable</th>
-				<th>Cout</th>
 				<th>Nombre</th>
-				<th>Budget</th>
-				<th>Investissement</th>
 				<th colspan="2"><a class="ajax_action" href="{{  path('stock_objet_add') }}"><i class="icon-plus-sign"></i></a></th>
 			</tr>
 		</thead>
@@ -36,16 +49,10 @@
 		<td>{{ objet.photo }}</td>
 		<td>{% if objet.localisation %}{{ objet.localisation.label }}{%  endif %}</td>
 		<td>{% if objet.etat %}{{ objet.etat.label }}{%  endif %}</td>
-		<td>{{ objet.taille }}</td>
-		<td>{{ objet.poid }}</td>
-		<td>{{ objet.couleur }}</td>
 		<td>{% if objet.proprietaire %}{{ objet.proprietaire.nom }}{%  endif %}</td>
 		<td>{% if objet.responsable %}{{ objet.responsable.username }}{%  endif %}</td>
-		<td>{{ objet.cout }}</td>
 		<td>{{ objet.nombre }}</td>
-		<td>{{ objet.budget }}</td>
-		<td>{{ objet.investissement }}</td>
-		<td><a href=""><i class="icon-document"></i></a></td>
+		<td><a href="{{ path('stock_objet_detail', {index : objet.id} ) }}"><i class="icon-document"></i></a></td>
 		<td><a class="ajax_action" href="{{ path('stock_objet_update', {index : objet.id} ) }}"><i class="icon-pencil"></i></a></td>
 		</tr>
 		{% endfor %}
