--- a/src/LarpManager/Views/stock/objet/detail.twig
+++ b/src/LarpManager/Views/stock/objet/detail.twig
@@ -4,7 +4,7 @@
 
 	<div id="ajax_entity">
 		
-		<table class="pure-table pure-table-bordered">
+		<table>
 		<caption>Détail de {{ objet.code }} - {{ objet.nom }}</caption>
 		<thead>
 			<tr>
