Finalisation install procedure + tests

--- a/src/LarpManager/Views/denied.twig
+++ b/src/LarpManager/Views/denied.twig
@@ -20,7 +20,7 @@
     	<div>
 	    	
 	        <div id="content">
-	        <p>Le site est en maintenance.</p>
+	        <p>Vous n'avez pas les droits pour cette action.</p>
 	        </div>
 			
 	        <div id="footer">
